@@ -1,11 +1,10 @@
-import play.sbt.PlayImport.PlayKeys._
+import play.sbt.PlayImport.PlayKeys.*
 import sbt.Package.FixedTimestamp
 
-import scala.sys.process._
+import scala.sys.process.*
 import scala.util.control.NonFatal
-import scala.collection.JavaConverters._
-
-import com.typesafe.sbt.packager.debian.JDebPackaging
+import scala.collection.JavaConverters.*
+import com.typesafe.sbt.packager.docker.*
 
 // We need to keep the timestamps to allow caching headers to work as expected on assets.
 // The below should work, but some problem in one of the plugins (possible the play plugin? or sbt-web?) causes
@@ -29,7 +28,7 @@ val commonSettings = Seq(
   Test / testOptions ++= Seq(Tests.Argument(TestFrameworks.ScalaTest, "-o"), Tests.Argument(TestFrameworks.ScalaTest, "-u", "logs/test-reports")),
   libraryDependencies ++= Seq(
     "org.scalatestplus.play" %% "scalatestplus-play" % "5.1.0" % Test,
-    "org.scalatestplus" %% "mockito-3-4" % "3.2.10.0" % Test,
+    "org.scalatestplus" %% "mockito-3-4" % "3.1.4.0" % Test,
     "org.mockito" % "mockito-core" % "2.18.0" % Test,
     "org.scalamock" %% "scalamock" % "5.1.0" % Test,
   ),
@@ -55,6 +54,7 @@ Global / concurrentRestrictions := Seq(
 )
 
 val awsSdkVersion = "1.12.470"
+val awsSdkVersionV2 = "2.25.55"
 val elastic4sVersion = "8.3.0"
 val okHttpVersion = "3.12.1"
 
@@ -80,6 +80,7 @@ lazy val commonLib = project("common-lib").settings(
     "com.amazonaws" % "aws-java-sdk-sts" % awsSdkVersion,
     "com.amazonaws" % "aws-java-sdk-dynamodb" % awsSdkVersion,
     "com.amazonaws" % "aws-java-sdk-kinesis" % awsSdkVersion,
+    "software.amazon.awssdk" % "dynamodb" % awsSdkVersionV2,
     "org.elasticsearch" % "elasticsearch" % "1.7.6",
     "com.sksamuel.elastic4s" %% "elastic4s-core" % elastic4sVersion,
     "com.sksamuel.elastic4s" %% "elastic4s-client-esjava" % elastic4sVersion,
@@ -99,7 +100,7 @@ lazy val commonLib = project("common-lib").settings(
     // see: https://logback.qos.ch/setup.html#janino
     "org.codehaus.janino" % "janino" % "3.0.6",
     "com.typesafe.play" %% "play-json-joda" % "2.9.2",
-    "com.gu" %% "scanamo" % "1.0.0-M8",
+    "org.scanamo" %% "scanamo" % "1.1.1",
     // Necessary to have a mix of play library versions due to scala-java8-compat incompatibility
     "com.typesafe.play" %% "play-ahc-ws" % "2.8.9",
     "org.yaml" % "snakeyaml" % "1.31"
@@ -121,9 +122,9 @@ lazy val auth = playProject("auth", 9011)
 
 lazy val collections = playProject("collections", 9010)
 
-lazy val cropper = playProject("cropper", 9006)
+lazy val cropper = playImageLoaderProject("cropper", 9006)
 
-lazy val imageLoader = playProject("image-loader", 9003).settings {
+lazy val imageLoader = playImageLoaderProject("image-loader", 9003).settings {
   libraryDependencies ++= Seq(
     "org.apache.tika" % "tika-core" % "1.20",
     "com.drewnoakes" % "metadata-extractor" % "2.17.0"
@@ -155,6 +156,7 @@ lazy val thrall = playProject("thrall", 9002).settings(
     "org.codehaus.groovy" % "groovy-json" % "3.0.7",
     "com.yakaz.elasticsearch.plugins" % "elasticsearch-action-updatebyquery" % "2.2.0",
     "com.amazonaws" % "amazon-kinesis-client" % "1.8.10",
+    "software.amazon.awssdk" % "sqs" % awsSdkVersionV2,
     "com.whisk" %% "docker-testkit-scalatest" % "0.9.8" % Test,
     "com.whisk" %% "docker-testkit-impl-spotify" % "0.9.8" % Test,
     "com.google.protobuf" % "protobuf-java" % "3.19.6"
@@ -212,16 +214,17 @@ val buildInfo = Seq(
 )
 
 def playProject(projectName: String, port: Int, path: Option[String] = None): Project = {
-  val commonProject = project(projectName, path)
-    .enablePlugins(PlayScala, JDebPackaging, SystemdPlugin, BuildInfoPlugin)
+  project(projectName, path)
+    .enablePlugins(PlayScala, BuildInfoPlugin, DockerPlugin)
     .dependsOn(restLib)
     .settings(commonSettings ++ buildInfo ++ Seq(
+      dockerBaseImage := "openjdk:11-jre",
+      dockerExposedPorts in Docker := Seq(port),
       playDefaultPort := port,
       debianPackageDependencies := Seq("openjdk-8-jre-headless"),
       Linux / maintainer := "Guardian Developers <dig.dev.software@theguardian.com>",
       Linux / packageSummary := description.value,
       packageDescription := description.value,
-
       bashScriptEnvConfigLocation := Some("/etc/environment"),
       Debian / makeEtcDefault := None,
       Debian / packageBin := {
@@ -239,16 +242,54 @@ def playProject(projectName: String, port: Int, path: Option[String] = None): Pr
       ),
       Universal / javaOptions ++= Seq(
         "-Dpidfile.path=/dev/null",
-        s"-Dconfig.file=/usr/share/$projectName/conf/application.conf",
-        s"-Dlogger.file=/usr/share/$projectName/conf/logback.xml",
-        "-J-XX:+PrintGCDetails",
-        "-J-XX:+PrintGCDateStamps",
-        s"-J-Xloggc:/var/log/$projectName/gc.log",
-        "-J-XX:+UseGCLogFileRotation",
-        "-J-XX:NumberOfGCLogFiles=5",
-        "-J-XX:GCLogFileSize=2M"
-      )
-    ))
-  //Add the BBC library dependency if defined
-  maybeBBCLib.fold(commonProject){commonProject.dependsOn(_)}
+        s"-Dconfig.file=/opt/docker/conf/application.conf",
+        s"-Dlogger.file=/opt/docker/conf/logback.xml",
+        "-XX:+PrintCommandLineFlags", "-XX:MaxRAMPercentage=60"
+      ))
+    )
+}
+
+def playImageLoaderProject(projectName: String, port: Int, path: Option[String] = None): Project = {
+  project(projectName, path)
+    .enablePlugins(PlayScala, BuildInfoPlugin, DockerPlugin)
+    .dependsOn(restLib)
+    .settings(commonSettings ++ buildInfo ++ Seq(
+      dockerBaseImage := "openjdk:11-jre",
+      dockerExposedPorts in Docker := Seq(port),
+      dockerCommands ++= Seq(
+        Cmd("USER", "root"), Cmd("RUN", "apt-get", "update"),
+        Cmd("RUN", "apt-get", "install", "-y", "apt-utils"),
+        Cmd("RUN", "apt-get", "install", "-y", "graphicsmagick"),
+        Cmd("RUN", "apt-get", "install", "-y", "graphicsmagick-imagemagick-compat"),
+        Cmd("RUN", "apt-get", "install", "-y", "pngquant"),
+        Cmd("RUN", "apt-get", "install", "-y", "libimage-exiftool-perl")
+      ),
+      playDefaultPort := port,
+      debianPackageDependencies := Seq("openjdk-8-jre-headless"),
+      Linux / maintainer := "Guardian Developers <dig.dev.software@theguardian.com>",
+      Linux / packageSummary := description.value,
+      packageDescription := description.value,
+      bashScriptEnvConfigLocation := Some("/etc/environment"),
+      Debian / makeEtcDefault := None,
+      Debian / packageBin := {
+        val originalFileName = (Debian / packageBin).value
+        val (base, ext) = originalFileName.baseAndExt
+        val newBase = base.replace(s"_${version.value}_all", "")
+        val newFileName = file(originalFileName.getParent) / s"$newBase.$ext"
+        IO.move(originalFileName, newFileName)
+        println(s"Renamed $originalFileName to $newFileName")
+        newFileName
+      },
+      Universal / mappings ++= Seq(
+        file("common-lib/src/main/resources/application.conf") -> "conf/application.conf",
+        file("common-lib/src/main/resources/logback.xml") -> "conf/logback.xml",
+        file("image-loader/facebook-TINYsRGB_c2.icc") -> "facebook-TINYsRGB_c2.icc",
+        file("image-loader/grayscale.icc") -> "grayscale.icc",
+        file("image-loader/srgb.icc") -> "srgb.icc"
+      ),
+      Universal / javaOptions ++= Seq(
+        "-Dpidfile.path=/dev/null",
+        s"-Dconfig.file=/opt/docker/conf/application.conf",
+        s"-Dlogger.file=/opt/docker/conf/logback.xml"
+      )))
 }
